# wai-deck-real

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts  vitest.live.config.ts
.github/workflows/: ci.yml  live-ai-tests.yml  release.yml
scripts/: local-test-server.mjs
src/: App.tsx  mockData.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AIChallenge.tsx  AISettings.tsx  AddAIModal.tsx  ChatView.tsx  ConfirmDialog.tsx  MarkdownRenderer.tsx  Onboarding.tsx  Sidebar.tsx  TextInputDialog.tsx
src/lib/: fileContext.test.ts  fileContext.ts  folderUtils.test.ts  folderUtils.ts  liveProviders.live.test.ts  providerContract.test.ts  tauri.ts
